# voice-classifier-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: issue-template.md
docs/: proposal.md
experiments/Jul27_06-51-24_DESKTOP-6UF348A/: events.out.tfevents.1658872284.DESKTOP-6UF348A.11108.0
experiments/Jul27_07-51-44_DESKTOP-6UF348A/: events.out.tfevents.1658875904.DESKTOP-6UF348A.22468.0
experiments/Jul27_11-40-00_DESKTOP-6UF348A/: events.out.tfevents.1658889600.DESKTOP-6UF348A.3759.0
experiments/Jul27_17-08-24_DESKTOP-6UF348A/: events.out.tfevents.1658909304.DESKTOP-6UF348A.9312.0
res/: proposal.md
src/: cnn_based_model.py  config.py  dataset.py  enums.py  evaluate.py  models.py  schedulers.py  train.py  transforms.py
src/utils/: converter.py  metadata_generator.py  seed.py  split_and_create_melspectrum.py
