[tool.poetry]
name = "voice-classifier"
version = "0.1.0"
description = "A voice classifier software for a project in Practical Deeplearning"
authors = ["Lightbells <takahasi0928@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
