[tool.poetry]
name = "voice-classifier"
version = "0.1.0"
description = "A voice classifier software for a project in Practical Deeplearning"
authors = ["Lightbells <takahasi0928@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"
torchvision = "^0.13.0"
torchaudio = "^0.12.0"
tqdm = "^4.64.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
